fix(app.css): fix resize handle not aligning

--- a/app/app.css
+++ b/app/app.css
@@ -15,6 +15,10 @@
     position: relative;
 }
 
+.ui-resizable-handle.ui-resizable-se.ui-icon.ui-icon-gripsmall-diagonal-se {
+  right: 1px;
+}
+
 /*/
 /* demo
 /*/
